# splitBill

./: .gitignore  .pg_service.conf  .pgpass  API_REFERENCE.md  Dockerfile  Procfile  README.md  compose.yaml  main.py  manage.py  pyproject.toml  requirements.txt  schema.yml  start.sh
SBApp/: apps.py  views.py
api/: serializers.py  urls.py  utils.py  views.py
api/migrations/: 0001_initial.py  0002_delete_user.py
apps/api/: models.py  serializers.py  urls.py  utils.py  views.py
apps/api/migrations/: 0001_initial.py  0002_delete_user.py  0002_expenseassignment_split_bill_member_and_more.py  0003_initial.py  0003_moneygiven.py  0004_balance.py  0004_splitbill_active.py  0005_remove_expense_assigned_to_expenseassignment_and_more.py  0006_rename_amount_expenseassignment_share_amount.py  0007_rename_username_expenseassignment_user.py  0008_expense_split_type.py  0009_remove_expense_date_created_expense_date.py  0010_expense_paid_by.py
apps/sb_app/: apps.py
split_bill/: asgi.py  settings.py  urls.py  wsgi.py
splitbill/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_api.py
